# backend/app/controllers/application_controller.rb
@@ -1,7 +1,19 @@
 # frozen_string_literal: true
 
 class ApplicationController < ActionController::API
+  before_action :authenticate_user!
   rescue_from ActiveRecord::RecordNotFound, with: :not_found
+
+  def authenticate_user!
+    token = request.headers["Authorization"]&.split(" ")&.last
+    return render json: { error: "Unauthorized" }, status: :unauthorized unless token
+    begin
+      decoded_token = JsonWebToken.decode(token)
+      @current_user = User.find(decoded_token[:user_id])
+    rescue JWT::DecodeError, ActiveRecord::RecordNotFound
+      render json: { error: "Unauthorized" }, status: :unauthorized
+    end
+  end
 
   private
 
