# backend/config/routes.rb
@@ -3,6 +3,10 @@
 Rails.application.routes.draw do
   mount Rswag::Ui::Engine => "/api-docs"
   mount Rswag::Api::Engine => "/api-docs"
+
+  post "login", to: "auth#login"
+  post "register", to: "auth#register"
+
   namespace :api do
     namespace :v1 do
       resources :users
